force-app/main/default/objects/Invoice_Line__c/Invoice_Line__c.object-meta.xml
<CustomObject>
    <label>Invoice Line</label>
    <pluralLabel>Invoice Lines</pluralLabel>
    <nameField>
        <displayFormat>L-{0000000}</displayFormat>
        <label>Invoice Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>Línea de factura: categoría, unidades, PVP, coste del proveedor y descuento.</description>
</CustomObject>