force-app/main/default/objects/Invoice_Line__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <label>Discount</label>
    <type>Currency</type>
    <precision>12</precision>
    <scale>2</scale>
</CustomField>