force-app/main/default/objects/Invoice_Line__c/fields/Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Unit_Cost__c</fullName>
    <label>Unit Cost</label>
    <type>Currency</type>
    <precision>12</precision>
    <scale>2</scale>
</CustomField>