force-app/main/default/objects/Invoice_Line__c/fields/Units__c.field-meta.xml
<CustomField>
    <fullName>Units__c</fullName>
    <label>Units</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>